# pySigma-backend-gravwell

./: README.md  pyproject.toml
.github/workflows/: test.yml
sigma/backends/splunk/: __init__.py  gravwell.py
sigma/pipelines/gravwell/: __init__.py  gravwell.py
tests/: test_backend_gravwell.py  test_gravwell_pipelines.py
