[tool.poetry]
name = "pysigma-backend-gravwell"
version = "1.0.3"
description = "pySigma Gravwell backend"
authors = [Keith Smiley <stuff>]
license = "LGPL-2.1-only"
repository = "https://github.com/SigmaHQ/pySigma-backend-gravwell"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
